Mon Jan 23 18:31:30 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/Discovery.h:
        * dds/DCPS/Discovery.cpp:
        * dds/DCPS/RTPS/RtpsDiscovery.h:
        * dds/DCPS/RTPS/RtpsDiscovery.cpp:
        * dds/DCPS/RTPS/RtpsInfo.h:
        * dds/DCPS/RTPS/RtpsInfo.cpp:
        * dds/DCPS/RTPS/Sedp.h:
        * dds/DCPS/RTPS/Sedp.cpp:
        * dds/DCPS/RTPS/Spdp.h:
        * dds/DCPS/RTPS/Spdp.cpp:
        * tests/DCPS/ConfigFile/ConfigFile.cpp:
        * tests/DCPS/RtpsDiscovery/RtpsDiscovery.mpc:
        * tests/DCPS/UnitTests/UnitTests.mpc:

          Fixes for built_in_topics=0.
          RTPS Discovery will not work with built_in_topics=0.

Mon Jan 23 18:25:25 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/BuiltInTopicUtils.h:

          BuiltinTopicKeyLess::operator() should be const.

        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/RTPS/Sedp.cpp:
        * dds/DCPS/RTPS/Spdp.cpp:

          Fixes for GCC 3.3.x.

Mon Jan 23 15:35:55 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/rtps_udp/RtpsSampleHeader.cpp:
        * dds/DCPS/transport/rtps_udp/RtpsUdpDataLink.h:
        * dds/DCPS/transport/rtps_udp/RtpsUdpInst.h:
        * dds/DCPS/transport/rtps_udp/RtpsUdpInst.cpp:
        * dds/DCPS/transport/rtps_udp/RtpsUdpReceiveStrategy.cpp:
        * dds/DCPS/transport/rtps_udp/RtpsUdpTransport.cpp:
        * tests/DCPS/RtpsDiscovery/RtpsDiscoveryTest.cpp:

          Fuzz fixes.

Mon Jan 23 15:31:11 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/framework/TransportSendListener.cpp:

          Marked Default QoS values can't be used as regular QoS values.

Sat Jan 21 04:05:29 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * Merged the branch "RTPS", which includes the initial OpenDDS
          implementation of the DDS Interoperability Protocol, known as
          Real-Time Publish-Subscribe, version 2.1, OMG formal/2010-11-01.